# HaxEdit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  get_submodules.sh  init.py
misc/: lsp_test.py
scripts/: dl_themes.py  gen_icon_index.py  get_submodules.sh  render_icons.py
shaders/: glyph.frag.glsl  glyph.vert.glsl  image.frag.glsl  image.vert.glsl  ui.frag.glsl  ui.vert.glsl
src/: App.cpp  App.h  AskerDialog.cpp  AskerDialog.h  Bindings.cpp  Bindings.h  Buffer.cpp  Buffer.h  Clipboard.h  Dialog.cpp  Dialog.h  Document.cpp  Document.h  FileDialog.cpp  FileDialog.h  FileTypeHandler.cpp  FileTypeHandler.h  FloatingWin.cpp  FloatingWin.h  FontRenderer.cpp  FontRenderer.h  Git.cpp  Git.h  Image.cpp  Image.h  ImageBuffer.cpp  ImageBuffer.h  Logger.cpp  Logger.h  MessageDialog.cpp  MessageDialog.h  ProgressFloatingWin.cpp  ProgressFloatingWin.h  Prompt.cpp  Prompt.h  SessionHandler.cpp  SessionHandler.h  Shader.cpp  Shader.h  Split.cpp  (+34 more)
src/autocomp/: BufferWordProvider.cpp  BufferWordProvider.h  DictionaryProvider.cpp  DictionaryProvider.h  IProvider.h  LspProvider.cpp  LspProvider.h  PathProvider.cpp  PathProvider.h  Popup.cpp  Popup.h
src/common/: file.cpp  file.h  string.cpp  string.h
src/dialogs/: AskerDialog.cpp  AskerDialog.h  Dialog.cpp  Dialog.h  FileDialog.cpp  FileDialog.h  FindDialog.cpp  FindDialog.h  FindListDialog.cpp  FindListDialog.h  MessageDialog.cpp  MessageDialog.h
tests/: CMakeLists.txt  main.cpp
tests/samples/: applyEdit_output0.txt  applyEdit_output1.txt  applyEdit_output10.txt  applyEdit_output11.txt  applyEdit_output12.txt  applyEdit_output13.txt  applyEdit_output14.txt  applyEdit_output15.txt  applyEdit_output16.txt  applyEdit_output17.txt  applyEdit_output18.txt  applyEdit_output19.txt  applyEdit_output2.txt  applyEdit_output20.txt  applyEdit_output22.txt  applyEdit_output23.txt  applyEdit_output24.txt  applyEdit_output26.txt  applyEdit_output27.txt  applyEdit_output28.txt  applyEdit_output29.txt  applyEdit_output3.txt  applyEdit_output30.txt  applyEdit_output31.txt  applyEdit_output4.txt  applyEdit_output5.txt  applyEdit_output6.txt  applyEdit_output7.txt  applyEdit_output8.txt  applyEdit_output9.txt
